mobile flicker fix 03

--- a/v2/style.css
+++ b/v2/style.css
@@ -22,6 +22,8 @@ h2 {
 }
 
 #scroller {
+  position: fixed;
+  bottom: 0;
   height: 100%;
   width: 100%;
   overflow-y: scroll;
